<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_old"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="35dp"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/otp_customer_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/custom_edit_text_red"
            android:drawableLeft="@drawable/name"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/name"
            android:hint="@string/your_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleX=".9"
            android:scaleY=".9" />

        <EditText
            android:id="@+id/otp_customer_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/custom_edit_text_red"
            android:drawableLeft="@drawable/mobile_no"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/mobile_no"
            android:hint="@string/mobile_no"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleX=".9"
            android:scaleY=".9" />

        <EditText
            android:id="@+id/opt_get_code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/custom_edit_text_red"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleX=".9"
            android:scaleY=".9"
            android:visibility="gone" />

        <Button
            android:id="@+id/opt_get_code_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/ripple_button_effect"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/get_code"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/otp_deliver"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/order_history_button_shape"
            android:scaleX=".9"
            android:scaleY=".9"
            android:text="@string/verify_code"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/info_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_why_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:src="@drawable/why" />

            <TextView
                android:id="@+id/tv_whyYourNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Why Your Mobile Number is Required"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registrated_mobile_no_otp"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/ll_problem_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/white"
                    android:textStyle="italic">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_problem"
                        android:textColor="@color/white"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_suppor_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:textColorLink="@color/white" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/resend_otp"
                    android:textColor="@color/white"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/resend_progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:progressTint="@color/white"
            android:scaleX=".7"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>

