<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/orderHistoryListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/menu_list_selected_color"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOrderHistpryCustomerNameListItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"
                    android:transitionName="trasition_ordername" />

                <TextView
                    android:id="@+id/orderHistory_price"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="SR 1099.00/-"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textColor="@color/cardview_dark_background"
                    android:transitionName="trasition_orderid" />

                <TextView
                    android:id="@+id/orderHistpry_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:text="00000"
                    android:textColor="@color/cardview_dark_background" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOrderHistoryDateListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:text="date"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/orderHistoryStatusListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/delivered"
                    android:textColor="@color/deliveredColor"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/btnReorderListItem"
                    style="@style/Theme.AppCompat"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/order_history_button_shape"
                    android:text="@string/re_order"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>